; ModuleID = '/home/carl/AnghaBench/h2o/t/00unit/lib/handler/extr_........libhandlerheaders.c_on_sender_dispose.c'
source_filename = "/home/carl/AnghaBench/h2o/t/00unit/lib/handler/extr_........libhandlerheaders.c_on_sender_dispose.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.st_headers_early_hints_sender_t = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @on_sender_dispose to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @on_sender_dispose(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.st_headers_early_hints_sender_t*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = bitcast i8* %4 to %struct.st_headers_early_hints_sender_t*
  store %struct.st_headers_early_hints_sender_t* %5, %struct.st_headers_early_hints_sender_t** %3, align 8
  %6 = load %struct.st_headers_early_hints_sender_t*, %struct.st_headers_early_hints_sender_t** %3, align 8
  %7 = getelementptr inbounds %struct.st_headers_early_hints_sender_t, %struct.st_headers_early_hints_sender_t* %6, i32 0, i32 0
  %8 = call i64 @h2o_timer_is_linked(i32* %7)
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %14

10:                                               ; preds = %1
  %11 = load %struct.st_headers_early_hints_sender_t*, %struct.st_headers_early_hints_sender_t** %3, align 8
  %12 = getelementptr inbounds %struct.st_headers_early_hints_sender_t, %struct.st_headers_early_hints_sender_t* %11, i32 0, i32 0
  %13 = call i32 @h2o_timer_unlink(i32* %12)
  br label %14

14:                                               ; preds = %10, %1
  ret void
}

declare dso_local i64 @h2o_timer_is_linked(i32*) #1

declare dso_local i32 @h2o_timer_unlink(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
